fixed overflow issue with about me and border radius on mobile view

--- a/src/Styles/AboutMe.scss
+++ b/src/Styles/AboutMe.scss
@@ -11,6 +11,7 @@
   background-position: center; // Center the background image
   background-repeat: no-repeat; // Prevent the background image from repeating
   text-align: center;
+  overflow: hidden;
 }
 
 .about-me-section {
